# PageIndex

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt  run_pageindex.py  service.py
examples/: agentic_vectorless_rag_demo.py  contract_extraction_demo.py  contract_extraction_whitebox_demo.py
pageindex/: __init__.py  cli.py  client.py  config.py  config.yaml  contract_extraction.py  hybrid_index.py  hybrid_pipeline.py  identity.py  llm.py  logging_utils.py  markdown.py  page_index.py  page_index_md.py  pdf.py  retrieve.py  tree_optimization.py  tree_reconstruction.py  tree_utils.py  utils.py  whitebox_demo.py  workspace_store.py
pageindex/pipeline/: __init__.py  refinement.py  toc_alignment.py  toc_detection.py  tree_builder.py
sample_data/schemas/: contract_fields_basic.json  contract_fields_xt_full.json
tests/: test_api.py  test_cli.py  test_client.py  test_compatibility.py  test_config.py  test_contract_extraction.py  test_hybrid_pipeline.py  test_markdown.py  test_service.py  test_tree_optimization.py  test_tree_reconstruction.py  test_tree_utils.py  test_whitebox_demo.py  test_workspace_store.py  test_xt_schema.py
